# ww1game

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/campaigns/allied_western_front/: 0.map
assets/campaigns/german_western_front/: 0.map
assets/campaigns/western_front/: 0.map
assets/textures/factions/british_empire/officer/: properties.cfg
assets/textures/factions/german_empire/rifleman/: properties.cfg
assets/textures/terrain/summer/: tileset.psd
src/: CMakeLists.txt  game.cpp  loader.cpp  main.cpp  main.hpp  renderer.cpp
